Day -something patch
Login and Accounts system repairing

--- a/i18n/en.i18n.json
+++ b/i18n/en.i18n.json
@@ -4,7 +4,7 @@
   "loading": "Loading...",
   "login": {
     "title": "Login",
-    "main_btn": "Login With Gapps",
+    "main_btn": "Login Now",
     "about": "About",
     "branding": "uhs.life",
     "help": "Help Center",
